Fix alignment of terminal

--- a/src/components/ProcessTerminal/ProcessTerminal.module.css
+++ b/src/components/ProcessTerminal/ProcessTerminal.module.css
@@ -19,11 +19,15 @@
 }
 
 .output {
+    z-index: 1;
+    order: 1;
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
 
     width: 100%;
     height: 100%;
+
+    overflow: hidden;
 }
 
 .output .inner {
@@ -39,8 +43,8 @@
     padding: 10px;
     margin: 10px;
 
-    width: calc(100% - 40px);
-    height: calc(100vh - 200px);
+    width: calc(100% - 20px);
+    height: calc(100% - 20px);
 
     overflow-y: scroll;
 }
@@ -110,6 +114,8 @@ TODO: Also show up and down arrows on the scrollbar
 }
 
 .input {
+    z-index: 2;
+    order: 2;
     grid-column: 1 / span 1;
     grid-row: 2 / span 1;
 
